<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="prgTCPComm" Id="{402d3b06-ced7-491d-8408-4a31858388a1}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM prgTCPComm
VAR_INPUT
nServer1Port				: UDINT 				:= 12000;
sServer1Host				: T_IPv4Addr 			:= '192.168.5.1';
END_VAR
VAR_OUTPUT
	cmdData			: dutCommand;
	eCommand		: E_CommandList;
	rParam			: REAL;
END_VAR
VAR
	bInit: BOOL := TRUE;
	fbSocketCloseAll: FB_SocketCloseAll; 
	bSocketCloseError: BOOL;
	nSocketCloseError: UDINT;
	
	fbTcpEchoServer1				: FB_TCPServer;
		sServerReceivedData			: STRING(255);
		bStartServer1Communication	: BOOL 					:= TRUE;
		bServer1Connected			: BOOL;
		sServerData					: STRING(255);
		bServer1Busy				: BOOL;
		bServer1Error				: BOOL;
		nServer1ErrorID				: UDINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit THEN 				// Init Step to close all sockets after login PLC with  downlaod
	fbSocketCloseAll(
		sSrvNetId:= '', 
		bExecute:= TRUE, 
		tTimeout:= T#3S, 
		bBusy=> , 
		bError=> bSocketCloseError, 
		nErrId=> nSocketCloseError);
	IF NOT (fbSocketCloseAll.bBusy OR fbSocketCloseAll.bError) THEN
		bInit := FALSE;
		fbSocketCloseAll(bExecute:= FALSE);
	END_IF
ELSE
		
	fbTcpEchoServer1(
		sLocalHost:= '127.0.0.1', 								// Server IP Adress
		nLocalPort:= nServer1Port, 									// Server port
		bStartCommunication:= bStartServer1Communication, 			// Allow Client-connection or close connection
		bConnected => bServer1Connected,							// Client connection is valid
		cmdData => cmdData,
		sSendData => sServerData,
		bBusy=> bServer1Busy, 
		bError=> bServer1Error, 
		nErrorID=> nServer1ErrorID);
END_IF]]></ST>
    </Implementation>
    <LineIds Name="prgTCPComm">
      <LineId Id="3" Count="23" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>